[gd_scene load_steps=2 format=3 uid="uid://cnpeicd4jfyrt"]

[ext_resource type="Script" uid="uid://dkw88egu50kso" path="res://scripts/UI.gd" id="1_5d6e7f"]

[node name="UI" type="CanvasLayer"]
script = ExtResource("1_5d6e7f")

[node name="ScoreLabel" type="Label" parent="."]
offset_left = 20.0
offset_top = 50.0
offset_right = 250.0
offset_bottom = 100.0
theme_override_colors/font_color = Color(1, 0.8, 0.3, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 0.8)
theme_override_constants/shadow_offset_x = 2
theme_override_constants/shadow_offset_y = 2
theme_override_font_sizes/font_size = 36
text = "üí∞ Treasure: 0"

[node name="NextLootContainer" type="Control" parent="."]
layout_mode = 3
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 20.0
offset_top = -120.0
offset_right = 140.0
offset_bottom = -20.0
grow_vertical = 0

[node name="NextLootLabel" type="Label" parent="NextLootContainer"]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_bottom = 30.0
grow_horizontal = 2
theme_override_colors/font_color = Color(1, 0.9, 0.7, 1)
theme_override_font_sizes/font_size = 14
text = "üé£ Next Loot:"
horizontal_alignment = 1

[node name="NextLootSprite" type="Sprite2D" parent="NextLootContainer"]
position = Vector2(60, 65)
scale = Vector2(0.8, 0.8)

[node name="PauseButton" type="Button" parent="."]
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -80.0
offset_top = 120.0
offset_right = -20.0
offset_bottom = 150.0
theme_override_font_sizes/font_size = 14
text = "‚è∏Ô∏è Pause"

[node name="WarningLabel" type="Label" parent="."]
visible = false
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -150.0
offset_top = -200.0
offset_right = 150.0
offset_bottom = -170.0
theme_override_colors/font_color = Color(1, 0.2, 0.2, 1)
theme_override_font_sizes/font_size = 24
text = "WARNING!"
horizontal_alignment = 1

[node name="GameOverContainer" type="Control" parent="."]
visible = false
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="GameOverBackground" type="ColorRect" parent="GameOverContainer"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.7)

[node name="GameOverPanel" type="Panel" parent="GameOverContainer"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -200.0
offset_top = -150.0
offset_right = 200.0
offset_bottom = 150.0
grow_horizontal = 2
grow_vertical = 2

[node name="GameOverVBox" type="VBoxContainer" parent="GameOverContainer/GameOverPanel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 20.0
offset_top = 20.0
offset_right = -20.0
offset_bottom = -20.0
grow_horizontal = 2
grow_vertical = 2

[node name="GameOverTitle" type="Label" parent="GameOverContainer/GameOverPanel/GameOverVBox"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 0.2, 0.2, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 0.8)
theme_override_constants/shadow_offset_x = 2
theme_override_constants/shadow_offset_y = 2
theme_override_font_sizes/font_size = 32
text = "üíÄ MUTINY! üíÄ"
horizontal_alignment = 1

[node name="ReasonLabel" type="Label" parent="GameOverContainer/GameOverPanel/GameOverVBox"]
layout_mode = 2
theme_override_font_sizes/font_size = 16
text = "Ship tipped over!"
horizontal_alignment = 1

[node name="FinalScoreLabel" type="Label" parent="GameOverContainer/GameOverPanel/GameOverVBox"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 0.8, 0.4, 1)
theme_override_font_sizes/font_size = 20
text = "Final Score: 0"
horizontal_alignment = 1

[node name="HSeparator" type="HSeparator" parent="GameOverContainer/GameOverPanel/GameOverVBox"]
layout_mode = 2

[node name="RestartButton" type="Button" parent="GameOverContainer/GameOverPanel/GameOverVBox"]
layout_mode = 2
theme_override_font_sizes/font_size = 18
text = "üîÑ Set Sail Again! (R)"

[node name="MenuButton" type="Button" parent="GameOverContainer/GameOverPanel/GameOverVBox"]
layout_mode = 2
theme_override_font_sizes/font_size = 16
text = "‚öì Return to Port"
